--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,18 @@
 
 body   {
     background-color: rgb(29, 26, 26);
-    font-family: 'Kalam', cursive;
     font-weight: 400;
-    font-size: 1.4rem;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Kalam', cursive;
 }
 
 h1 {
+    
     color: white;
     margin-bottom: 5rem;
 }
@@ -57,20 +57,32 @@ h2 {
 }
 
 .btn {
+    font-size: 1.5rem;
     padding: 2rem 0;
     width: 30rem;
     text-align: center;
     text-decoration: none;
-    font-size: 1.5rem;
     margin-bottom: 1rem;
     color: rgb(28, 26, 26);
     background: #3336ff;
     border-radius: 4px;
 }
 
+.home-btn {
+    position: relative;
+    left: 46%;
+    bottom: 0.5%;
+    color: rgb(28, 26, 26);
+    background: #3336ff;
+    border-radius: 4px;
+    margin: 1%;
+    padding: 1%;
+}
+
 .btn:hover {
     cursor: pointer;
-    transform: scale(1.03)
+    transition: transform 100ms;
+    transform: scale(1.03);
 }
 
 .btn[disabled]:hover {
@@ -78,9 +90,11 @@ h2 {
     transform: none;
 }
 
+
 #highscore-btn {
     background: yellow;
 }
+
 
 /*End Screen CSS */
 
@@ -95,7 +109,7 @@ h2 {
 input {
     margin-bottom: 1rem;
     width: 20rem;
-    padding: 1.5;
+    padding: 1.5rem;
     font-size: 1.8rem;
     border: none;
 }
@@ -120,21 +134,7 @@ input::placeholder{
     border: none;
 }
 
-@media screen and (max-width: 1200px) {
-    .choice-container {
-        margin: 0 auto;
-    } 
+.fa-home {
+    margin-left: 1rem;
+    color: black;
 }
-
-@media screen and (max-width: 950px) {
-    .choice-container {
-        margin: 0 auto;
-    } 
-}
-
-@media screen and (max-width: 800px) {
-    .choice-container {
-            margin: 0 auto;
-        } 
-    }
-
